8358748: Large page size initialization fails with assert "page_size must be a power of 2"

Reviewed-by: ayang, dholmes
Backport-of: 40bc083267c0bac64b1092c63325b8d245937b0e