src/hotspot/share/runtime/flags/jvmFlagConstraintsRuntime.cpp
@@ -114,3 +114,13 @@ JVMFlag::Error HotswapAgentConstraintFunc(ccstr value, bool verbose) {
   }
   return JVMFlag::SUCCESS;
 }
+
+JVMFlag::Error LargePageSizeInBytesConstraintFunc(size_t value, bool verbose) {
+  if (!is_power_of_2(value)) {
+    JVMFlag::printError(verbose, "LargePageSizeInBytes ( %zu ) must be "
+                        "a power of 2\n",
+                        value);
+    return JVMFlag::VIOLATES_CONSTRAINT;
+  }
+  return JVMFlag::SUCCESS;
+}
